# BMI500_satpathy_week4

./: README.md  main.py  requirements.txt  run.sh  setup.cfg
pack/: main.py
