[metadata]
name = BMI500_satpathy_week4-satpathysarthak
version = 0.0.1
author = Sarthak Satpathy
author_email = sarthak.satpathy@emory.edu
description = Week 4 Assignment on clustering
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/satpathysarthak/BMI500_satpathy_week4
project_urls =
    Bug Tracker = https://github.com/satpathysarthak/BMI500_satpathy_week4/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Apache License :: 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = pack
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pack
